--- a/sections/slideshow.liquid
+++ b/sections/slideshow.liquid
@@ -210,6 +210,17 @@
             </a>
           </div>
         {%- endif -%}
+        <style>
+          slideshow-component .slideshow .slideshow__slide .banner__buttons {
+            position: absolute;
+            bottom: 30px;
+            left: 50%;
+            transform: translateX(-50%);
+            text-wrap: nowrap;
+            display: flex;
+            width: fit-content;
+          }
+        </style>
         {% comment %}
           <div class="slideshow__text-wrapper banner__content banner__content--{{ block.settings.box_align }} page-width{% if block.settings.show_text_box == false %} banner--desktop-transparent{% endif %}{% if settings.animations_reveal_on_scroll and forloop.index == 1 %} scroll-trigger animate--slide-in{% endif %}">
             <div class="slideshow__text banner__box content-container content-container--full-width-mobile color-{{ block.settings.color_scheme }} gradient slideshow__text--{{ block.settings.text_alignment }} slideshow__text-mobile--{{ block.settings.text_alignment_mobile }}">
