--- a/sections/slideshow.liquid
+++ b/sections/slideshow.liquid
@@ -218,6 +218,7 @@
             transform: translateX(-50%);
             text-wrap: nowrap;
             display: flex;
+            z-index: 9;
             width: fit-content;
           }
         </style>
