--- a/sections/lp-know-what-you-get.liquid
+++ b/sections/lp-know-what-you-get.liquid
@@ -3,12 +3,8 @@
     <h2 class="page-width kwyg-heading section-heading">{{ section.settings.section_heading }}</h2>
   {% endif %}
   {% for block in section.blocks %}
-    {% if block.desktop_image %}
-      <img class="lp-desktop-banner" src="{{section.settings.desktop_image |  image_url }}">
-    {% endif %}
-    {% if section.settings.mobile_image %}
-      <img class="lp-mobile-banner" src="{{section.settings.mobile_image |  image_url }}">
-    {% endif %}
+    <img class="lp-desktop-banner" src="{{block.settings.desktop_image |  image_url }}">
+    <img class="lp-mobile-banner" src="{{block.settings.mobile_image |  image_url }}">
   {% endfor %}
 </div>
 
@@ -16,6 +12,16 @@
   .kwyg-heading {
     position: sticky;
     top: 0;
+    background: #000;
+    width: 100%;
+    max-width: unset !important;
+    margin-left: 0;
+    padding: 0;
+    margin-right: 0;
+    margin-top: 10px;
+    margin-bottom: 0;
+    padding-top: 40px;
+    padding-bottom: 30px;
   }
   .lp-banner-container {
     display: flex;
