--- a/sections/home-discreet-packaging.liquid
+++ b/sections/home-discreet-packaging.liquid
@@ -8,6 +8,7 @@
   <button id="know-more-btn">{{ section.settings.button_text }}</button>
   <div id="popup-backdrop" class="hidden">
     <div id="popup-image-container">
+      <p class="discreet-delivery-X">X</p>
       <img
         src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/Discreet_Delivery_Pop_up_image_2.png?v=1739948622"
         alt="Discreet Delivery Popup"
@@ -19,6 +20,7 @@
   document.addEventListener('DOMContentLoaded', () => {
     const popupBackdrop = document.getElementById('popup-backdrop');
     const knowMoreBtn = document.getElementById('know-more-btn');
+    const closeButton = document.querySelector('.discreet-delivery-X'); // Select the close button
 
     // Toggle popup and manage scroll behavior
     const togglePopup = () => {
@@ -36,6 +38,11 @@
         togglePopup();
       }
     });
+
+    // Hide popup when the close button is clicked
+    if (closeButton) {
+      closeButton.addEventListener('click', togglePopup);
+    }
   });
 </script>
 <style>
@@ -99,9 +106,29 @@
     }
   }
   #popup-image-container {
+    position: relative;
     border-radius: 15px;
     overflow: hidden;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+  }
+  .discreet-delivery-X {
+    position: absolute;
+    top: 0px;
+    color: #fff;
+    cursor: pointer;
+    font-family: cursive;
+    right: 20px;
+    padding: 6px 13px;
+    border: solid 1px #fff;
+    border-radius: 500px;
+    width: 50px;
+    height: auto;
+    aspect-ratio: 1 / 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    line-height: 0;
+    background: #00000050;
   }
 
   #popup-image-container img {
