--- a/assets/component-slideshow.css
+++ b/assets/component-slideshow.css
@@ -10,7 +10,8 @@ slideshow-component .slideshow.banner {
   margin: 0;
   gap: 0;
   overflow-y: hidden;
-  height: 100%;
+  height: fit-content;
+  min-height: fit-content;
   width: 100%;
 }
 
